--- a/src/styles/ContactPage/_contact-form.scss
+++ b/src/styles/ContactPage/_contact-form.scss
@@ -9,9 +9,16 @@
     font-weight: $heading-bold;
     font-family: $body-ff;
     font-size: 13px;
+    padding-bottom: 8px;
   }
 
   &__input {
     width: 311px;
+    border: none;
+    outline: none;
+    padding: 8px 0 8px 8px;
+    color: #33323d;
+    opacity: 40%;
+    background-color: #cacaca;
   }
 }
