--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,5 @@
 @import "./PortfolioIndex/projects";
 @import "./ContactPage/contact-form";
 @import "./ContactPage/contact-page-header";
+@import "./Projects/projects-browser-btn";
+@import "./Projects/projects";
