--- a/src/styles/_base-styles.scss
+++ b/src/styles/_base-styles.scss
@@ -77,7 +77,19 @@ body {
   letter-spacing: 2px;
   border: solid 1px black;
 }
-.button:hover {
+
+.button-blue {
+  background-color: $dark-blue;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+button:hover {
   cursor: pointer;
 }
 
@@ -105,4 +117,16 @@ a:active,
 a:visited,
 a:focus {
   text-decoration: none;
+}
+::placeholder {
+  color: black;
+  opacity: 1;
+}
+
+:-ms-input-placeholder {
+  color: black;
+}
+
+::-ms-input-placeholder {
+  color: black;
 }
