--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,13 +1,18 @@
 @import "css-reset";
 @import "./FrontPage/mobile-nav-bar";
+@import "./FrontPage/nav-bar";
 @import "./FrontPage/frontpage-header";
 @import "base-styles";
 @import "./FrontPage/about-me";
 @import "./FrontPage/contact";
 @import "./FrontPage/footer";
 @import "./FrontPage/dropdown-menu";
-@import "./PortfolioIndex/projects";
+@import "./PortfolioIndex/portfolio-index";
 @import "./ContactPage/contact-form";
 @import "./ContactPage/contact-page-header";
 @import "./Projects/projects-browser-btn";
 @import "./Projects/projects";
+@import "./FrontPage/front-page-grid";
+@import "./mixins";
+@import "./MediaQueries/global-styles";
+@import "./FrontPage/mobile-nav-bar";
