--- a/src/styles/ContactPage/_contact-form.scss
+++ b/src/styles/ContactPage/_contact-form.scss
@@ -1,24 +1,59 @@
 @import "../base-styles";
+@import "../mixins";
 
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  &__text {
-    font-weight: $heading-bold;
-    font-family: $body-ff;
-    font-size: 13px;
-    padding-bottom: 8px;
+@include sm {
+  .form {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    gap: 1rem;
+    padding: 1rem;
+
+    &__text {
+      display: block;
+      font-weight: $heading-bold;
+      font-family: $body-ff;
+      font-size: 13px;
+      padding: 1rem 0 1rem 2px;
+    }
+
+    &__input {
+      width: 343px;
+      border: none;
+      outline: none;
+      padding: 8px 0 8px 8px;
+      color: black;
+      opacity: 40%;
+      background-color: #cacaca;
+    }
+    &__button {
+      margin: 2rem 0 2rem 0 !important;
+    }
   }
+}
 
-  &__input {
-    width: 311px;
-    border: none;
-    outline: none;
-    padding: 8px 0 8px 8px;
-    color: #33323d;
-    opacity: 40%;
-    background-color: #cacaca;
+@include md {
+  .form {
+    &__input {
+      width: 668px;
+    }
+  }
+}
+
+.error {
+  color: red;
+}
+
+@include lg {
+  .form {
+    flex-direction: row;
+    gap: 0;
+
+    &__button {
+      margin-top: 2rem !important;
+    }
+  }
+  .min-width-50 {
+    min-width: 50%;
   }
 }
