--- a/src/styles/ContactPage/_contact-page-header.scss
+++ b/src/styles/ContactPage/_contact-page-header.scss
@@ -1,1 +1,40 @@
 @import "../base-styles";
+@import "../mixins";
+
+@include sm {
+  .contact-header {
+    padding: 0 1rem 0 1rem;
+
+    &__heading {
+      padding: 1rem 0 1rem 0;
+    }
+
+    &__content {
+      padding-bottom: 2rem;
+    }
+    &__icon:nth-child(1) {
+      margin-left: 0;
+    }
+  }
+  .footer__icon-container {
+    padding-bottom: 2rem;
+  }
+}
+
+@include md {
+  .contact-header__hr-divider {
+    width: 668px !important;
+  }
+}
+@include lg {
+  .flex-row-dt {
+    display: flex;
+  }
+  .heading {
+    min-width: 50%;
+    padding: 0;
+  }
+  .contact-header__hr-divider {
+    width: 100% !important;
+  }
+}
