--- a/src/styles/FrontPage/_dropdown-menu.scss
+++ b/src/styles/FrontPage/_dropdown-menu.scss
@@ -2,8 +2,6 @@
 
 .menu {
   &__list-container {
-    height: 300px;
-    background-color: black;
     width: 223px;
     height: 186px;
     background-color: $dark-gray-blue;
@@ -14,8 +12,9 @@
     gap: 16px;
     padding: 0;
     position: absolute;
-    top: -20px;
-    right: 16px;
+    z-index: 50;
+    top: 3.3rem;
+    right: 1rem;
   }
   &__list-item {
     list-style: none;
