--- a/src/styles/FrontPage/_footer.scss
+++ b/src/styles/FrontPage/_footer.scss
@@ -1,28 +1,54 @@
 @import "../base-styles";
+@import "../mixins";
 
-.footer {
-  background-color: $dark-gray-blue;
-  height: 350px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2.5rem;
+//MOBILE STYLES
 
-  &__list-container {
-    padding-left: 10px;
+@include sm {
+  .footer {
+    background-color: $dark-gray-blue !important;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5rem;
+
+    &__list-container {
+      padding-left: 10px;
+    }
+
+    &__list-item {
+      color: white;
+      list-style: none;
+      padding-top: 20px;
+      text-align: center;
+      letter-spacing: 2px;
+      font-size: 12px;
+    }
+    &__icon {
+      display: inline;
+      margin-left: 15px;
+    }
   }
+}
+@include md {
+  .footer {
+    min-width: 700px;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: $dark-gray-blue;
 
-  &__list-item {
-    color: white;
-    list-style: none;
-    padding-top: 20px;
-    text-align: center;
-    letter-spacing: 2px;
-    font-size: 12px;
-  }
-  &__icon {
-    display: inline;
-    margin-left: 15px;
+    &__list-container {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 10px;
+    }
+    &__list-item {
+      padding: 0;
+    }
   }
 }
