--- a/src/styles/FrontPage/_frontpage-header.scss
+++ b/src/styles/FrontPage/_frontpage-header.scss
@@ -1,34 +1,139 @@
 @import "../base-styles";
+@import "../mixins";
 
-.header {
-  &__img {
-    width: 100%;
-    max-width: 100%;
+//MOBILE STYLES
+
+@include sm {
+  .nav-bar {
+    display: none !important;
   }
-  &__text {
-    font-family: $heading-ff;
-    font-size: $h2;
-    font-weight: $heading-bold;
-    padding: 24px 0 24px 0;
+  .header__img-tablet {
+    display: none;
   }
-  &__button {
-    background-color: $dark-blue !important;
-    color: white;
-    display: flex;
-    align-items: center;
-    border: none;
-    padding: 0;
+  .profile__img-tablet {
+    display: none;
   }
-  &__logo-container {
-    flex-basis: 48px;
-    height: 48px;
-    background-color: #1a3242;
+  .header {
+    &__img-mobile {
+      width: 100%;
+      max-width: 100%;
+      padding: 0 1rem 1rem 1rem;
+    }
+    &__img-tablet {
+      display: none;
+    }
+    &__img-desktop {
+      display: none;
+    }
+    &__text {
+      font-family: $heading-ff;
+      font-size: $h2;
+      font-weight: $heading-bold;
+      padding: 0 1rem 1rem 1rem;
+      line-height: 55px;
+    }
+    &__button {
+      background-color: $dark-blue !important;
+      color: white;
+      display: flex;
+      align-items: center;
+      border: none;
+      padding: 0;
+      margin: 0 1rem 5rem 1rem;
+    }
+    &__logo-container {
+      flex-basis: 48px;
+      height: 48px;
+      background-color: #1a3242;
+    }
+    &__btn-logo {
+      padding-top: 16px;
+      padding-left: 14px;
+    }
+    &__btn-text {
+      padding-left: 33px;
+    }
   }
-  &__btn-logo {
-    padding-top: 16px;
-    padding-left: 14px;
+}
+
+//TABLET STYLES
+
+@include md {
+  .grid-container {
+    min-width: 700px;
   }
-  &__btn-text {
-    padding-left: 33px;
+
+  .front-page-grid {
+    min-width: 700px;
+  }
+  .nav-bar {
+    display: flex !important;
+  }
+
+  .header {
+    min-width: 700px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(10, 60px);
+    padding: 0rem 1rem 1rem 1rem;
+
+    &__img-mobile {
+      display: none;
+    }
+    &__img-tablet {
+      display: block;
+      width: 100%;
+      height: 600px;
+      grid-column: 1 / 5;
+    }
+    &__text {
+      background-color: white;
+      line-height: 55px;
+      grid-column: 1 / 4;
+      grid-row: 6 / 11;
+      padding: 3rem 0 0 0;
+    }
+    &__button {
+      grid-column: 1;
+      grid-row: 10;
+      margin: 12px 0 0 0;
+    }
+  }
+}
+
+@include lg {
+  .grid-container {
+    min-width: 1440px !important;
+  }
+
+  .front-page-grid {
+    min-width: 1440px !important;
+  }
+
+  .header {
+    min-width: 1440px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(16, 48px);
+    &__img-tablet {
+      display: none;
+    }
+    &__img-desktop {
+      display: block;
+      width: 100%;
+      grid-column: 1 / 6;
+    }
+    &__text {
+      margin: 3.7rem 0 0 0;
+      font-size: 50px;
+      line-height: 50px;
+      padding-right: 5rem;
+      grid-column: 1 / 3;
+      grid-row: 6 / 17;
+      line-height: 55px;
+    }
+    &__button {
+      grid-row: 16;
+      place-self: left;
+    }
   }
 }
