--- a/src/styles/Projects/_projects.scss
+++ b/src/styles/Projects/_projects.scss
@@ -1,13 +1,214 @@
-.project {
-  &__image {
-    width: 100%;
-    max-width: 100%;
+@import "../mixins";
+
+//MOBILE
+
+@include sm {
+  .project__static-previews-desktop {
+    display: none;
   }
-  .content-green {
-    color: #5fb4a2;
+  .project-grid-desktop {
+    display: none;
   }
-  &__preview-image {
-    padding-top: 32px;
-    padding-bottom: 64px;
+  .project {
+    padding: 1rem;
+    &__image {
+      width: 100%;
+      max-width: 100%;
+    }
+
+    &__preview-image {
+      padding-top: 32px;
+      padding-bottom: 64px;
+    }
+    &__image-tablet {
+      display: none;
+    }
+    &__image-desktop {
+      display: none;
+    }
+
+    //HEADER
+
+    &__image {
+      padding-bottom: 2rem;
+    }
+    &__hr-divider-top {
+      margin-bottom: 2rem;
+    }
+    &__heading {
+      padding-bottom: 2rem;
+    }
+    &__content {
+      padding-bottom: 2rem;
+    }
+    &__button {
+      margin-bottom: 2rem;
+    }
+    .content-green {
+      color: #5fb4a2;
+    }
+    //PROJECT BACKGROUND & STATIC PREVIEWS
+
+    &__sub-heading {
+      padding-bottom: 2rem;
+      font-weight: 400;
+      font-size: 32px;
+    }
+  }
+
+  //TABLET
+
+  @include md {
+    //NAV BAR
+
+    .mobile-nav-bar {
+      display: none;
+    }
+    .nav-bar {
+      display: flex;
+    }
+
+    //CONTENT
+
+    .project__static-previews-desktop {
+      display: none;
+    }
+    .project-grid-desktop {
+      display: none;
+    }
+    .project__static-previews {
+      display: block;
+    }
+    .manage-container {
+      min-width: 700px;
+    }
+    .project-header-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas:
+        "img img "
+        "img img "
+        "hr-top hr-top "
+        "heading content"
+        "content-green content"
+        "btn content"
+        "hr-bottom hr-bottom";
+    }
+    .project {
+      &__image {
+        display: none;
+      }
+      &__image-desktop {
+        display: none;
+      }
+      &__image-tablet {
+        display: block;
+        width: 100%;
+        grid-area: img;
+      }
+
+      &__hr-divider-top {
+        margin: 2rem 0 2rem 0 !important;
+        width: 668px !important;
+        justify-self: center;
+        grid-area: hr-top;
+      }
+      &__hr-divider-bottom {
+        margin: 2rem 0 0rem 0 !important;
+        width: 668px !important;
+        justify-self: center;
+        grid-area: hr-bottom;
+      }
+      &__heading {
+        padding: 0 0 1rem 0 !important;
+        grid-area: heading;
+      }
+      &__content {
+        grid-area: content;
+        padding: 0 0 0 1rem !important;
+      }
+      &__button {
+        grid-area: btn;
+      }
+    }
+    .content-green {
+      grid-area: content-green;
+      padding: 0 0.5rem 1rem 0 !important;
+    }
+  }
+}
+@include lg {
+  .project-header-grid {
+    min-width: 1440px;
+    column-gap: 5rem;
+    row-gap: 2rem;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "img img"
+      "img img"
+      "hr-top bg"
+      "heading bg"
+      "content bg"
+      "content-green ."
+      "btn preview"
+      "hr-bottom preview";
+  }
+  .project-grid {
+    display: none;
+  }
+  .project-grid-desktop {
+    display: block;
+    grid-area: bg;
+    padding: 0;
+  }
+  .project__static-previews-desktop {
+    display: block;
+    grid-area: preview;
+  }
+  .project__static-previews {
+    display: none;
+  }
+
+  .content {
+    padding: 0;
+  }
+  .project {
+    &__image-tablet {
+      display: none;
+    }
+    &__image-desktop {
+      grid-area: img;
+      display: block !important;
+      width: 100%;
+    }
+    &__hr-divider-top {
+      grid-area: hr-top;
+      margin: 0 !important;
+    }
+    &__heading {
+      grid-area: heading;
+      padding: 0 !important;
+      font-weight: 700;
+      font-size: 40px;
+    }
+    &__content {
+      grid-area: content;
+      padding: 0 !important;
+      font-weight: 400;
+    }
+    .content-green {
+      grid-area: content-green;
+    }
+    &__button {
+      grid-area: btn;
+    }
+    &__hr-divider-bottom {
+      grid-area: hr-bottom;
+      margin-top: 5rem !important;
+      grid-row: 7 !important;
+    }
+    &__sub-heading {
+      padding: 0;
+    }
   }
 }
